# machine_learning

./: .gitignore
datasets/: pima-indians-diabetes.csv
kdtree/: CMakeLists.txt
kdtree/src/: kdtree.hpp  knn.cpp  pipeline.hpp
kdtree/src/backup/: backup.cpp
logistic_regresion/: CMakeLists.txt
logistic_regresion/src/: logistic_classifier.cpp
logistic_regresion/src/test/: test.txt
logistic_regresion/test/: test_soft_unbalance.txt
naive_bayers/: CMakeLists.txt
naive_bayers/src/: naive_bayers.cpp  naive_bayers_continuous.cpp  pipeline.hpp
perceptron/: CMakeLists.txt
perceptron/src/: perceptron.cpp  perceptron_kernel.cpp  run.bat
perceptron/test/: non_linear.txt
svm/: CMakeLists.txt
svm/linear_svm_hingeloss/: CMakeLists.txt
svm/linear_svm_hingeloss/src/: svm_by_hingeloss.cpp
svm/linear_svm_hingeloss/src/test/: test_soft.txt
svm/soft_margin_linear_svm/: CMakeLists.txt
svm/soft_margin_linear_svm/src/: svm.cpp
svm/src/: run.bat  svm.cpp
